<resources>
    <string name="app_name">Placemark</string>
    <string name="button_addPlacemark">Add MyQuickinfo</string>
    <string name="hint_placemarkTitle">MyQuickInfo Title</string>
    <string name="hint_placemarkDescription">Description </string>
    <string name="title">Title</string>
    <string name="link">Link</string>
    <string name="add_post">Add Post</string>
    <string name="menu_cancelPlacemark">Cancel</string>
    <string name="save_Myquick"> Save My Quick Info </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_myquick_image">Select My Quick Info image</string>
    <string name="menu_deletePost">Delete</string>
</resources>
